@@ -3,6 +3,11 @@ For full details, see the git log at: https://github.com/ksh93/ksh
 
 Any uppercase BUG_* names are modernish shell bug IDs.
 
+2022-01-16:
+
+- Setting a variable with a ${var:=value} expansion while the allexport shell
+  option is on now exports the variable.
+
 2022-01-12:
 
 - Added bash-inspired --histreedit and --histverify options that modify history
